--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         depends_on:
             - mysql
     mysql:
-        image: 'mysql/mysql-server:8.0'
+        image: mysql:8.3
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
