--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^12.0",
         "laravel/sail": "^1.42",
         "laravel/tinker": "^2.10.1",
-        "orchid/platform": "^14.52"
+        "orchid/platform": "^14.52",
+        "spatie/laravel-translatable": "^6.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
