--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^12.0",
         "laravel/sail": "^1.42",
         "laravel/tinker": "^2.10.1",
+        "orchid/crud": "^4.4",
         "orchid/platform": "^14.52",
         "spatie/laravel-translatable": "^6.11"
     },
